@@ -3,4 +3,3 @@
 - Fishing net
 - Meat from every mob
 - Abandoned cave
-- Fix tool not storing metadata when put & removed from flint workbench
